--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ dynamic interface that look great & function seamlessly across all devices </p>
 </div>
 
 <div class="btn-box">
-    <a href="#"id="download" download class="btn">Download CV</a>
+    <a href="#skills"id="download" class="btn">My Skills</a>
     <a href="#contact" class="btn">Contact Me!</a>
 </div>
 <!-- <div class="social-icon">
