--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ dynamic interface that look great & function seamlessly across all devices </p>
     <h3>A story of good</h3>
     <p>My name is Kashaf Eman. I'm proficent in HTML ,CSS and Javascript and I'm trying to learn the React js and some other frame works.</p>
     <h2 style="font-weight: 500;font-size:1.5rem">Work Experience</h2>
-    <p>I have a experience of one year from 2024 to 2025.</p>
+    <p>I have a experience of 5 years from 2021 to 2025.</p>
     <p> I have done my web development from Code Fusion Link & Technologies.</p>
     <h2 style="font-weight: 500;font-size:1.5rem">Education</h2>
     <p style="margin-bottom: 1.5rem;">I had  done my intermediate with good marks.After that I took addmission in university in software engineering department until continue from virtual university.</p>    
